<resources>
    <string name="app_name">Mandoor</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="telepon">Telepon</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="checkboxreg">Saya setuju dengan syarat dan ketentuan yang berlaku</string>
    <string name="btnreg">Register</string>
    <string name="versionApp">V.1.0</string>
    <string name="title_activity_login">loginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginbtn">Login</string>
    <string name="signupbtn">Sign Up</string>
    <string name="or_login_with">Or Login With</string>
    <string name="lupa_password">Lupa Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>