<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grbg1"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="142dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mandoors_logo" />

    <EditText
        android:id="@+id/editTextnama"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextnama"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextelepon"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/telepon"
        android:inputType="text|phone"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextemail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextpassword"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextelepon"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextconpass"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxreg"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:buttonTint="@color/fullwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextconpass"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewbox"
        android:layout_width="233dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:padding="5dp"
        android:text="@string/checkboxreg"
        android:fontFamily="@font/intersemibold"
        android:textColor="@color/fullwhite"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/checkBoxreg"
        app:layout_constraintTop_toBottomOf="@+id/editTextconpass" />

    <Button
        android:id="@+id/buttonreg"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/orangebtn"
        android:text="@string/btnreg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonback"
        style="@style/btn_style"
        android:layout_width="13dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:tint="@color/black79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>