<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grbg1"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".loginActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="142dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mandoors_logo" />


    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextpassword"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shapecol"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/greytext"
        android:textSize="12sp"
        android:drawableEnd="@drawable/eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextemail"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/lupapass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="58dp"
        android:fontFamily="@font/intersemibold"
        android:padding="5dp"
        android:text="@string/lupa_password"
        android:clickable="true"
        android:textColor="@color/fullwhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnlogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnlogIn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/orangebtn"
        android:text="@string/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/orangebtn"
        android:text="@string/signupbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogIn" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="1dp"

        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@drawable/btnback"
        app:layout_constraintEnd_toStartOf="@+id/orwith"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/btnback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/orwith"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <TextView
        android:id="@+id/orwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/intersemibold"
        android:padding="5dp"
        android:text="@string/or_login_with"
        android:textColor="@color/fullwhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <Button
        android:id="@+id/button"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/fullwhite"
        android:drawableEnd="@drawable/google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orwith"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/button2"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@color/fullwhite"
        android:drawableEnd="@drawable/facebook_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orwith"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/button3"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/fullwhite"
        android:drawableEnd="@drawable/twitter_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orwith"
        app:layout_constraintVertical_bias="0.31" />


</androidx.constraintlayout.widget.ConstraintLayout>